--- a/Cluster Analysis/scripts/Cluster Analysis-Copy2.ipynb
+++ b/Cluster Analysis/scripts/Cluster Analysis-Copy2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "5a68c48b",
    "metadata": {},
    "outputs": [
@@ -94,6 +94,7 @@
        "      <th>Convexity</th>\n",
        "      <th>Cost</th>\n",
        "      <th>Decay</th>\n",
+       "      <th>Tail Reliability</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -103,6 +104,7 @@
        "      <td>0.001556</td>\n",
        "      <td>0.952677</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.885098</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays US Small Cap Weekly Var Hourly Index  BXIIRWVH Index</th>\n",
@@ -110,6 +112,7 @@
        "      <td>0.001557</td>\n",
        "      <td>0.940718</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.764133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Eurozone Weekly Short Var Hourly Index  BXIIESFH Index</th>\n",
@@ -117,6 +120,7 @@
        "      <td>0.001306</td>\n",
        "      <td>0.957960</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.806473</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays US Long Short Variance Relative Value Strategy  BXIIUVR2 Index</th>\n",
@@ -124,6 +128,7 @@
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.101370</td>\n",
+       "      <td>0.564052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays VIX Options Risk Premium Series II Strategy Excess Return  BEFSDHVD Index</th>\n",
@@ -131,6 +136,7 @@
        "      <td>0.018968</td>\n",
        "      <td>0.885105</td>\n",
        "      <td>0.687671</td>\n",
+       "      <td>0.495901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Global Multi-Factor MH EW Index  BXIIWFHU Index</th>\n",
@@ -138,6 +144,7 @@
        "      <td>0.001812</td>\n",
        "      <td>0.958770</td>\n",
        "      <td>0.531507</td>\n",
+       "      <td>0.756782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Global Multi-Factor MH EW Index HiC  BXIIWHIC Index</th>\n",
@@ -145,6 +152,7 @@
        "      <td>0.001346</td>\n",
        "      <td>0.958411</td>\n",
        "      <td>0.271233</td>\n",
+       "      <td>0.742837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Global Multi-Factor MH 2x Leveraged  BXIIWFH2 Index</th>\n",
@@ -152,6 +160,7 @@
        "      <td>0.003914</td>\n",
        "      <td>0.915600</td>\n",
        "      <td>0.410959</td>\n",
+       "      <td>0.757091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Global Multi-Factor MH 3x Leveraged  BXIIWFH3 Index</th>\n",
@@ -159,6 +168,7 @@
        "      <td>0.006097</td>\n",
        "      <td>0.872037</td>\n",
        "      <td>0.410959</td>\n",
+       "      <td>0.757215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays US Multi-Factor MH EW Index  BXIIUFHU Index</th>\n",
@@ -166,6 +176,7 @@
        "      <td>0.004272</td>\n",
        "      <td>0.924251</td>\n",
        "      <td>0.063014</td>\n",
+       "      <td>0.571772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Eurozone Multi-Factor MH EW Index  BXIIEFHE Index</th>\n",
@@ -173,6 +184,7 @@
        "      <td>0.002810</td>\n",
        "      <td>0.932936</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>0.766941</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays UK  Multi-Factor MH EW Index  BXIIGFHG Index</th>\n",
@@ -180,6 +192,7 @@
        "      <td>0.006687</td>\n",
        "      <td>0.907919</td>\n",
        "      <td>0.287671</td>\n",
+       "      <td>0.605480</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Japan Multi-Factor MH EW Index  BXIIJFHJ Index</th>\n",
@@ -187,6 +200,7 @@
        "      <td>0.002909</td>\n",
        "      <td>0.947768</td>\n",
        "      <td>0.057534</td>\n",
+       "      <td>0.605708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Global Momentum Market Hedged Index  BXIIWMHU Index</th>\n",
@@ -194,6 +208,7 @@
        "      <td>0.003787</td>\n",
        "      <td>0.904587</td>\n",
        "      <td>0.293151</td>\n",
+       "      <td>0.605389</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays US Momentum Equity Market Hedged Index ER  BXIIMMUE Index</th>\n",
@@ -201,6 +216,7 @@
        "      <td>0.004931</td>\n",
        "      <td>0.811920</td>\n",
        "      <td>0.079452</td>\n",
+       "      <td>0.470903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Eurozone Momentum Equity Market Hedged Index ER  BXIIMMEE Index</th>\n",
@@ -208,6 +224,7 @@
        "      <td>0.006355</td>\n",
        "      <td>0.868008</td>\n",
        "      <td>0.068493</td>\n",
+       "      <td>0.526792</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays UK Momentum Equity Market Hedged Index ER  BXIIMMGE Index</th>\n",
@@ -215,6 +232,7 @@
        "      <td>0.003778</td>\n",
        "      <td>0.892204</td>\n",
        "      <td>0.279452</td>\n",
+       "      <td>0.664693</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Japan Momentum Equity Market Hedged Index ER  BXIIMMJE Index</th>\n",
@@ -222,6 +240,7 @@
        "      <td>0.007103</td>\n",
        "      <td>0.855746</td>\n",
        "      <td>0.035616</td>\n",
+       "      <td>0.597538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays Global Value Market Hedged Index  BXIIWVHU Index</th>\n",
@@ -229,6 +248,7 @@
        "      <td>0.004820</td>\n",
        "      <td>0.914815</td>\n",
        "      <td>0.230137</td>\n",
+       "      <td>0.472153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Barclays US Value Equity Market Hedged Index ER  BXIIVMUE Index</th>\n",
@@ -236,6 +256,7 @@
        "      <td>0.006827</td>\n",
        "      <td>0.818139</td>\n",
        "      <td>0.065753</td>\n",
+       "      <td>0.280331</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -286,30 +307,30 @@
        "Barclays Global Value Market Hedged Index  BXII...   0.004820  0.914815   \n",
        "Barclays US Value Equity Market Hedged Index ER...   0.006827  0.818139   \n",
        "\n",
-       "                                                       Decay  \n",
-       "Barclays Weekly Short Var Hourly Index  BXIIUWF...  1.000000  \n",
-       "Barclays US Small Cap Weekly Var Hourly Index  ...  1.000000  \n",
-       "Barclays Eurozone Weekly Short Var Hourly Index...  1.000000  \n",
-       "Barclays US Long Short Variance Relative Value ...  0.101370  \n",
-       "Barclays VIX Options Risk Premium Series II Str...  0.687671  \n",
-       "Barclays Global Multi-Factor MH EW Index  BXIIW...  0.531507  \n",
-       "Barclays Global Multi-Factor MH EW Index HiC  B...  0.271233  \n",
-       "Global Multi-Factor MH 2x Leveraged  BXIIWFH2 I...  0.410959  \n",
-       "Barclays Global Multi-Factor MH 3x Leveraged  B...  0.410959  \n",
-       "Barclays US Multi-Factor MH EW Index  BXIIUFHU ...  0.063014  \n",
-       "Barclays Eurozone Multi-Factor MH EW Index  BXI...  0.000000  \n",
-       "Barclays UK  Multi-Factor MH EW Index  BXIIGFHG...  0.287671  \n",
-       "Barclays Japan Multi-Factor MH EW Index  BXIIJF...  0.057534  \n",
-       "Barclays Global Momentum Market Hedged Index  B...  0.293151  \n",
-       "Barclays US Momentum Equity Market Hedged Index...  0.079452  \n",
-       "Barclays Eurozone Momentum Equity Market Hedged...  0.068493  \n",
-       "Barclays UK Momentum Equity Market Hedged Index...  0.279452  \n",
-       "Barclays Japan Momentum Equity Market Hedged In...  0.035616  \n",
-       "Barclays Global Value Market Hedged Index  BXII...  0.230137  \n",
-       "Barclays US Value Equity Market Hedged Index ER...  0.065753  "
+       "                                                       Decay  Tail Reliability  \n",
+       "Barclays Weekly Short Var Hourly Index  BXIIUWF...  1.000000          0.885098  \n",
+       "Barclays US Small Cap Weekly Var Hourly Index  ...  1.000000          0.764133  \n",
+       "Barclays Eurozone Weekly Short Var Hourly Index...  1.000000          0.806473  \n",
+       "Barclays US Long Short Variance Relative Value ...  0.101370          0.564052  \n",
+       "Barclays VIX Options Risk Premium Series II Str...  0.687671          0.495901  \n",
+       "Barclays Global Multi-Factor MH EW Index  BXIIW...  0.531507          0.756782  \n",
+       "Barclays Global Multi-Factor MH EW Index HiC  B...  0.271233          0.742837  \n",
+       "Global Multi-Factor MH 2x Leveraged  BXIIWFH2 I...  0.410959          0.757091  \n",
+       "Barclays Global Multi-Factor MH 3x Leveraged  B...  0.410959          0.757215  \n",
+       "Barclays US Multi-Factor MH EW Index  BXIIUFHU ...  0.063014          0.571772  \n",
+       "Barclays Eurozone Multi-Factor MH EW Index  BXI...  0.000000          0.766941  \n",
+       "Barclays UK  Multi-Factor MH EW Index  BXIIGFHG...  0.287671          0.605480  \n",
+       "Barclays Japan Multi-Factor MH EW Index  BXIIJF...  0.057534          0.605708  \n",
+       "Barclays Global Momentum Market Hedged Index  B...  0.293151          0.605389  \n",
+       "Barclays US Momentum Equity Market Hedged Index...  0.079452          0.470903  \n",
+       "Barclays Eurozone Momentum Equity Market Hedged...  0.068493          0.526792  \n",
+       "Barclays UK Momentum Equity Market Hedged Index...  0.279452          0.664693  \n",
+       "Barclays Japan Momentum Equity Market Hedged In...  0.035616          0.597538  \n",
+       "Barclays Global Value Market Hedged Index  BXII...  0.230137          0.472153  \n",
+       "Barclays US Value Equity Market Hedged Index ER...  0.065753          0.280331  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,14 +339,14 @@
     "file_path = dm.EQUITY_HEDGE_DATA+'def_uni_hedge_metrics_more.xlsx'\n",
     "#normalized_hm = pd.read_excel(dm.EQUITY_HEDGE_DATA+'def_uni_hedge_metrics_more.xlsx', index_col=(0))\n",
     "normalized_hm = pd.read_excel(dm.QIS_UNIVERSE +'Normalized_Hedge_Metrics.xlsx', index_col=(0))\n",
-    "features = ['Downside Reliability', 'Convexity', 'Cost', 'Decay']\n",
+    "features = ['Downside Reliability', 'Convexity', 'Cost', 'Decay','Tail Reliability']\n",
     "normalized_hm = normalized_hm[features]\n",
     "normalized_hm.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "39c53ca4",
    "metadata": {},
    "outputs": [
@@ -482,7 +503,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "cdecbb73",
    "metadata": {},
    "outputs": [
@@ -667,7 +688,7 @@
        "[100 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1fe07faf",
    "metadata": {
     "scrolled": false
@@ -749,7 +770,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f57aaa3b1be147ef9d95b5074d71e8a5",
+       "model_id": "7f0532ce29b54b66b05954e810de4d2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -791,7 +812,6 @@
     "\n",
     "# Function to display the two best-performing strategies for a selected feature within the selected cluster\n",
     "def show_two_best_strategies_in_cluster(selected_cluster, selected_feature):\n",
-    "    # Filter the data based on selected cluster and feature\n",
     "    selected_strategies = normalized_hm[normalized_hm['Cluster'] == selected_cluster]\n",
     "    selected_strategies = selected_strategies.nlargest(2, selected_feature)\n",
     "    print(f\"\\nCluster {selected_cluster} - Two Best Performing Strategies based on {selected_feature}:\")\n",
@@ -836,65 +856,6 @@
     "\n",
     "\n",
     "# interact(show_strategies_in_cluster, selected_cluster=cluster_dropdown);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "927c9a30",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normalized_hm = pd.read_excel(dm.QIS_UNIVERSE + 'Normalized_Hedge_Metrics.xlsx', index_col=0)\n",
-    "\n",
-    "features = ['Downside Reliability', 'Convexity', 'Cost', 'Decay']\n",
-    "normalized_hm = normalized_hm[features]\n",
-    "\n",
-    "num_clusters = 3\n",
-    "\n",
-    "# Function to perform hierarchical clustering\n",
-    "def perform_clustering(selected_feature):\n",
-    "    distances = pdist(normalized_hm[[selected_feature]])\n",
-    "    square_distances = squareform(distances)\n",
-    "    linked = linkage(square_distances, 'ward')\n",
-    "    clusters = fcluster(linked, t=num_clusters, criterion='maxclust')\n",
-    "    normalized_hm['Cluster'] = clusters\n",
-    "\n",
-    "    best_strategy = normalized_hm[selected_feature].idxmax()\n",
-    "    print(f\"Best Performing Strategy based on '{selected_feature}': {best_strategy}\")\n",
-    "\n",
-    "    return normalized_hm\n",
-    "\n",
-    "# Function to display the strategies in the selected cluster\n",
-    "def show_strategies_in_cluster(selected_cluster):\n",
-    "    selected_strategies = normalized_hm[normalized_hm['Cluster'] == selected_cluster].index.tolist()\n",
-    "    print(f\"\\nCluster {selected_cluster} Strategies based on '{feature_dropdown.value}':\")\n",
-    "    print(selected_strategies)\n",
-    "\n",
-    "# Dropdown widget for selecting different cluster numbers\n",
-    "cluster_dropdown = widgets.Dropdown(\n",
-    "    options=range(1, num_clusters + 1),\n",
-    "    description='Select Cluster:',\n",
-    "    value=num_clusters,  # Default value is the total number of clusters\n",
-    ")\n",
-    "\n",
-    "# Dropdown widget for selecting different features\n",
-    "feature_dropdown = widgets.Dropdown(\n",
-    "    options=features,\n",
-    "    description='Select Feature:',\n",
-    "    value=features[0],  # Default value is the first feature in the list\n",
-    ")\n",
-    "\n",
-    "# Call the perform_clustering function whenever the feature dropdown selection changes\n",
-    "@interact(selected_feature=feature_dropdown)\n",
-    "def update_clustering(selected_feature):\n",
-    "    perform_clustering(selected_feature)\n",
-    "\n",
-    "# Display the best performing strategy for the default feature\n",
-    "perform_clustering(features[0])\n",
-    "\n",
-    "# Interact to display the strategies in the selected cluster based on the selected feature\n",
-    "interact(show_strategies_in_cluster, selected_cluster=cluster_dropdown);"
    ]
   },
   {
